# gtest_cmocka_demo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile_commands.json  coverage.sh  test.sh
src/: CMakeLists.txt  fib.cpp  fib.h  main.cpp  print_to_file.c  print_to_file.cpp  print_to_file.h
test/: CMakeLists.txt  compile_commands.json  coverage.sh  fib_test.cpp  mock_functions.cpp  mock_functions.h  print_to_file_test.cpp  test.sh
test/src/: fib_test.cpp  main.cpp  mock_functions.cpp  mock_functions.h  print_to_file_test.cpp
test/src/caces/: print_to_file_test.cpp
test/src/cases/: print_to_file_test.cpp
test/src/common/: common.h  mock_functions.cpp
